--- a/pages/goods/edit.html
+++ b/pages/goods/edit.html
@@ -1,8 +1,7 @@
 {% extends "osr-style/pages/based/based.html" %}
-{% block title %}{{_("添加|编辑商品-")}}{% endblock %}
+{% block title %}{{_("编辑商品-")}}{% endblock %}
 {% block content %}
 <!-- Date Picker -->
-<link href="/theme/static/css/bootstrap-datetimepicker.min.css?v={{g.site_global.site_config.STATIC_FILE_VERSION}}" rel="stylesheet" type="text/css" />
 <data id="goods_id" content="{{data.goods_id}}" hidden></data>
 
 <div id="app" v-cloak>
@@ -10,206 +9,19 @@
         <div class="col-md-12 osr-col-xs-12">
             <section class="osr-panel">
               <header class="panel-heading tab-bg-dark-navy-blue osr-panel-heading">
-                  <strong v-if="goods_id">{{_("编辑商品")}}</strong>
-                  <strong v-else>{{_("添加商品")}}</strong>
+                  <strong >{{_("编辑商品")}}</strong>
                   <a class="pull-right"
                      href="/goods/setting">
                         <i class="fa fa-arrow-circle-left"></i>
                       {{_("返回")}}
                   </a>
               </header>
-                <!--显示-->
-                <div v-if="!basic_editing && goods_id" class="panel-body">
-                    <span v-if="goods.goods_type_id===gt._id" v-for="gt in goods_types">
-                        <strong>{{_("商品类别")}}: </strong>{[gt.name]}
-                    </span>
-                    &nbsp;
-                    <span v-if="goods.category_id===gt._id" v-for="gt in categorys">
-                        <strong>{{_("分类")}}: </strong>{[gt.name]}
-                    </span>
-                    &nbsp;
-                    <span v-if="goods.business_id===gt._id" v-for="gt in businesses">
-                        <strong>{{_("商品品牌")}}: </strong>{[gt.name]}&nbsp;
-                    </span>
-                    <br>
-                    <span>
-                        <strong>{{_("商品货号")}}: </strong>
-                        <span  v-if="goods.customize_id" style="color:blue">
-                            {[goods.customize_id]}
-                        </span>
-                        <span  v-else>{{_("暂无")}}</span>
-
-                    </span>
-                    &nbsp;
-                    <span>
-                        <strong>{{_("性别")}}: </strong>
-                        <span  v-if="goods.gender=='n'">{{_("中性")}}</span>
-                        <span  v-if="goods.gender=='m'">{{_("男")}}</span>
-                        <span  v-if="goods.gender=='f'">{{_("女")}}</span>
-                    </span>
-                    &nbsp;
-                    <span>
-                        <strong>{{_("上市时间")}}: </strong>{[goods.time_to_market]}
-                    </span>
-
-                </div>
-                <!--显示-->
-                <a v-if="!basic_editing && goods_id" v-on:click="switch_editing()">
-                    {{_('编辑以上信息')}}
-                </a>
-              <div v-if="basic_editing || !goods_id" class="panel-body">
-
-
-                <label>{{_("货号(自定义ID)")}}</label>
-                <div class="input-group">
-                    <input v-model="goods.customize_id" class="form-control osr-input" type="text" :value="goods.customize_id" />
-                </div>
-                 <br>
-                <!--商品类别-->
-                <label>{{_("商品类别")}}</label>
-                <div class="input-group">
-                    <select id="goods_type" class="form-control osr-form-control" name="goods_type" @change="switch_type($event.target.value)">
-                      <option  v-if="goods.goods_type_id===gt._id" v-for="gt in goods_types" v-bind:value =gt._id selected>{[gt.name]} </option>
-                      <option  v-if="goods.goods_type_id!==gt._id" v-for="gt in goods_types" v-bind:value =gt._id>{[gt.name]} </option>
-                    </select>
-                    <a class="btn osr-btn-link" href="/content/category?type=post&ps={{data.status}}&peditor={{data.editor}}&pid={{data.id}}">
-                      <i class="fa fa-cog"></i>
-                    </a>
-                </div>
-                <br>
-                <!--细分分类-->
-                <label>{{_("小类")}}</label>
-                <div class="input-group">
-                    <select id="category" class="form-control osr-form-control" name="category" @change="switch_category($event.target.value)">
-                      <option  v-if="goods.category_id===cg._id" v-for="cg in categorys" v-bind:value =cg._id selected>{[cg.name]} </option>
-                      <option  v-if="goods.category_id!==cg._id" v-for="cg in categorys" v-bind:value =cg._id>{[cg.name]} </option>
-                    </select>
-                    <a class="btn osr-btn-link" href="/content/category?type=post&ps={{data.status}}&peditor={{data.editor}}&pid={{data.id}}">
-                      <i class="fa fa-cog"></i>
-                    </a>
-                </div>
-
-                <br>
-
-                <!--厂家-->
-                <label>{{_("商品品牌")}}</label>
-                <div class="input-group">
-                    <select id="business" class="form-control osr-form-control" name="business" @change="switch_business($event.target.value)">
-                      <option  v-if="goods.business_id===bs._id" v-for="bs in businesses" v-bind:value =bs._id selected>{[bs.name]} </option>
-                      <option  v-if="goods.business_id!==bs._id" v-for="bs in businesses" v-bind:value =bs._id>{[bs.name]} </option>
-                    </select>
-                    <a class="btn osr-btn-link" href="/content/category?type=post&ps={{data.status}}&peditor={{data.editor}}&pid={{data.id}}">
-                      <i class="fa fa-cog"></i>
-                    </a>
-                </div>
-                <br>
-              <!--上市日期-->
-               <label>{{_("上市日期")}}</label>
-                <div class="input-group from-inline">
-                    <select id="time_to_market_y" class="form-control osr-form-control" name="time_to_market" @change="switch_time('y',$event.target.value)">
-                      <option  v-if="time_to_market_y===tm" v-for="tm in years" v-bind:value =tm selected>{[tm]} </option>
-                      <option  v-if="time_to_market_y!==tm" v-for="tm in years" v-bind:value =tm>{[tm]} </option>
-                    </select>
-                    &nbsp;&nbsp;
-                    <select id="time_to_market_m" class="form-control osr-form-control" name="time_to_market" @change="switch_time('m',$event.target.value)">
-                      <option  v-if="time_to_market_m===tm" v-for="tm in months" v-bind:value =tm selected>{[tm]} </option>
-                      <option  v-if="time_to_market_m!==tm" v-for="tm in months" v-bind:value =tm>{[tm]} </option>
-                    </select>
-                </div>
-                <br>
-                <!--适合性别-->
-                <div class="form-group form-inline">
-                    <label class="control-label">{{_('性别')}}&nbsp;</label>
-                    <div class="radio radio-success">
-                        <input  v-if="goods.gender=='m'" id="m" class="form-radio-input" type="radio" name="gender"
-                               v-model="goods.gender" value="m" checked>
-                        <input  v-else id="m" class="form-radio-input" type="radio" name="gender"
-                               v-model="goods.gender" value="m">
-                        <label class="form-radio-label" for="m"> {{_("男")}} </label>
-                    </div>
-                    &nbsp;&nbsp;
-                    <div class="radio radio-success">
-                        <input  v-if="goods.gender=='f'" id="f" class="form-radio-input" type="radio" name="gender"
-                               v-model="goods.gender" value="f" checked>
-                        <input  v-else id="f" class="form-radio-input" type="radio" name="gender"
-                               v-model="goods.gender" value="f">
-                        <label class="form-radio-label" for="f"> {{_("女")}} </label>
-                    </div>
-                    &nbsp;&nbsp;
-                    <div class="radio radio-success">
-                        <input  v-if="goods.gender=='n'" id="n" class="form-radio-input" type="radio" name="gender"
-                               v-model="goods.gender" value="n" checked>
-                        <input  v-else id="n" class="form-radio-input" type="radio" name="gender"
-                               v-model="goods.gender" value="n">
-                        <label class="form-radio-label" for="n"> {{_("中性")}} </label>
-                    </div>
-                </div>
-                  <br>
-
-                <!--备注-->
-                <div class="form-group">
-                    <label >{{_('其他')}}</label>
-                    <textarea class="form-control" style="height:100px"  minlength="0" maxlength="100"
-                            placeholder="{{_('备注!')}}" v-model="goods.introduction" :value="goods.introduction">
-                    </textarea>
-                </div>
-
-                <div class="btn-group">
-                    <button v-on:click="add_goods()" class="btn osr-btn btn-info osr-submit-btn">
-                        {{_('保存')}}
-                    </button>
-                </div>
-            </div>
-
-
-                <!--成分-->
-                <div class="form-group form-inline">
-                    <label class="control-label">{{_('成分')}}&nbsp;</label>
-                    <p>
-                      <button v-on:click="add_cloth_input" class="btn btn-sm osr-btn btn-success">
-                         {{_("添加")}}
-                     </button>
-                     </p>
-
-                    <data id="cloth_input"> </data>
-                    <div :id="'cloth_input_'+index" v-for="v,index in goods.cloth.value"  class="form-group">
-                          <input  class="form-control osr-input" type="text" :value="v.name" />&nbsp;
-                          <input  class="form-control osr-input" type="text" :value="v.content" />
-                        <br><br>
-                          <button v-on:click="remove_input('')"   class="btn-sm osr-btn btn btn-default"></button>
-                        &nbsp;<br><br>
-                    </div>
-                </div>
-                <br>
-
-                <!--属性-->
-                <div class="form-group form-inline">
-                    <label class="control-label">{{_('属性')}}&nbsp;</label>
-                    <p>
-                      <button v-on:click="add_property_input()" class="btn btn-sm osr-btn btn-success">
-                         {{_("添加")}}
-                     </button>
-                     </p>
-
-                    <data id="property_input"> </data>
-                    <div v-for="v,index in goods.property" class="form-group">
-                          <input name="color" class="form-control osr-input" type="text" :value="v.color" />&nbsp;
-                          <input name="size" class="form-control osr-input" type="text" :value="v.size" />&nbsp;
-                          <input name="unit_price"  class="form-control osr-input" type="text" :value="v.unit_price" />&nbsp;
-                          <input name="quantity" class="form-control osr-input" type="text" :value="v.quantity" />
-                        <br><br>
-                        <button v-on:click="remove_input('')"   class="btn-sm osr-btn btn btn-default">
-                          </button>
-                        &nbsp;<br><br>
-                    </div>
-                </div>
-                <br>
-
+                {% include 'inventory-sys-theme/pages/goods/_edit_basic.html' %}
+                {% include 'inventory-sys-theme/pages/goods/_edit_other.html' %}
        </section>
       </div>
     </div>
 </div>
-<script src="/theme/static/js/plugins/bs-datetimepicker/bootstrap-datetimepicker.min.js?v={{g.site_global.site_config.STATIC_FILE_VERSION}}" type="text/javascript"></script>
 <script>
 
     var vue = new Vue({
@@ -235,7 +47,18 @@
             time_to_market_y:0,
             time_to_market_m:1,
             goods_id:null,
-            basic_editing:0
+            new_color:null,
+            new_size:null,
+            unified_quantity:0,
+            unified_price:0,
+            new_quantity:0,
+            new_price:0,
+            new_cloth:{name:"",per:0},
+
+            basic_editing:0,
+            pr_editing:0,
+            pr_other_editing:0,
+            cloth_editing:0
       }
     })
 
@@ -243,8 +66,9 @@
     var goods_id = null;
     $(document).ready(function(){
 
-        get_types();
-
+        // 获取商品信息
+        vue.goods_id = $("#goods_id").attr("content");
+        get_goods(vue.goods_id);
         //
         var date = new Date();
         var year = date.getFullYear();
@@ -262,6 +86,9 @@
         var result = osrHttp("GET","/api/plug/goods",{goods_id:id}, args={not_prompt:true});
         result.then(function (r) {
               vue.goods = r.data.goods;
+              get_types();
+              vue.time_to_market_y = vue.goods.time_to_market/100;
+              vue.time_to_market_m = vue.goods.time_to_market%100;
         });
     }
 
@@ -270,9 +97,7 @@
          result.then(function (r) {
             vue.goods_types = r.data.types;
             if(vue.goods_types.length){
-                vue.goods.goods_type_id = vue.goods_types[0]._id;
                 get_categorys();
-
             }
          });
     }
@@ -283,12 +108,6 @@
 
          result.then(function (r) {
             vue.categorys = r.data.categorys;
-            if(vue.categorys.length){
-                vue.goods.category_id = vue.categorys[0]._id;
-            }else{
-                vue.goods.category_id = "";
-            }
-
             get_businesses();
          });
     }
@@ -299,92 +118,7 @@
 
          result.then(function (r) {
             vue.businesses = r.data.businesses;
-            if(vue.businesses.length){
-                vue.goods.business_id = vue.businesses[0]._id;
-            }else{
-                vue.goods.business_id = "";
-            }
-            // 获取商品信息
-            vue.goods_id = $("#goods_id").attr("content");
-            if(vue.goods_id){
-                get_goods(vue.goods_id);
-            }
-
          });
-    }
-
-    function switch_type(value){
-        vue.goods.goods_type_id = value;
-        get_categorys();
-        get_businesses();
-    }
-
-    function switch_category(value){
-        vue.goods.category_id = value;
-    }
-
-    function switch_business(value){
-        vue.goods.business_id = value;
-    }
-
-    function switch_time(f,value){
-        if(f=='y'){
-            vue.time_to_market_y = parseInt(value);
-        }else{
-            vue.time_to_market_m = parseInt(value);
-        }
-        if(vue.time_to_market_m<10){
-            vue.time_to_market_m = '0'+vue.time_to_market_m;
-        }
-
-    }
-
-    function switch_editing(){
-        vue.basic_editing = !vue.basic_editing;
-    }
-
-    function add_cloth_input(){
-        var id = osr_guid();
-        html = '<div id="'+id+ '" class="list_dict form-group from-inline form-icon form-feedback">'
-                +'<input name="cloth_name" class="form-control osr-input" type="text" placeholder={{_("成分名称")}} />&nbsp;'
-                +'<input name="cloth_name" class="form-control osr-input" type="text" placeholder="%(填1-100)" />'
-                +'<br><br><button onclick="remove_input('+"'"+id+ "'"+ ')" class="btn-sm osr-btn btn btn-danger">{{_("移除")}}</button>'
-                +'&nbsp;<br><br></div>';
-        $("#cloth_input").before(html);
-
-    }
-
-    function add_property_input(){
-        var id = osr_guid();
-        html = '<div id="'+id+ '" class="list_dict form-group from-inline form-icon form-feedback">'
-                +'<input name="color" class="form-control osr-input" type="text" placeholder={{_("颜色")}} />&nbsp;'
-                +'<input name="size" class="form-control osr-input" type="text" placeholder={{_("尺寸")}} />&nbsp;'
-                +'<input name="unit_price" class="form-control osr-input" type="text" placeholder={{_("单价")}} />&nbsp;'
-                +'<input name="quantity" class="form-control osr-input" type="text" placeholder={{_("数量")}} />'
-                +'<br><br><button onclick="remove_input('+"'"+id+ "'"+ ')" class="btn-sm osr-btn btn btn-danger">{{_("移除")}}</button>'
-                +'&nbsp;<br><br></div>';
-        $("#property_input").before(html);
-
-    }
-
-    function remove_input(id){
-         $("#"+id).remove();
-    }
-
-    function add_goods(){
-        data = {
-            goods_type_id:vue.goods.goods_type_id,
-            category_id:vue.goods.category_id,
-            business_id:vue.goods.business_id,
-            customize_id:vue.goods.customize_id,
-            time_to_market:vue.time_to_market_y*100+vue.time_to_market_m,
-            gender:vue.goods.gender,
-            introduction:vue.goods.introduction
-        }
-        var result = osrHttp("POST","/api/plug/goods", data);
-        result.then(function (r) {
-              window.location.href = window.location.pathname+ "?goods_id="+r.data.insered_id;
-        });
     }
 
 
