--- a/pages/warehouse/type/index.html
+++ b/pages/warehouse/type/index.html
@@ -1,4 +1,4 @@
-{% extends "osr-style/pages/based/based.html" %}
+{% extends "warehouse-theme/pages/based/based.html" %}
 {% block title %}{{_('商品分类')}}-{% endblock %}
 {% block content %}
 <div id="app" v-cloak>
@@ -9,7 +9,7 @@
               <header class="panel-heading tab-bg-dark-navy-blue osr-panel-heading">
                   <strong>{{_("商品大类")}}</strong>
                   <a class="pull-right"
-                     href="/goods/setting">
+                     href="/warehouse">
                         <i class="fa fa-arrow-circle-left"></i>
                       {{_("返回")}}
                   </a>
