--- a/pages/based/_header_bar_menu_left.html
+++ b/pages/based/_header_bar_menu_left.html
@@ -23,6 +23,14 @@
             </a>
 
         </li>
+        {% if current_user.is_authenticated %}
+        <li class="user-menu dropdown">
+            <a class="lv1-a" href="/warehouse">
+                {{_("仓库")}}
+            </a>
+
+        </li>
+        {% endif %}
 
         <li class="user-menu dropdown">
             <a class="osr-pointer lv1-a dropdown-toggle" data-toggle="dropdown">
